--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 
 	"onCreateCommand": "bash .devcontainer/onCreateCommand.sh",
 	"postStartCommand": "bash .devcontainer/postStartCommand.sh",
-	
+	"forwardPorts": [5432],
 	"customizations": {
 		"vscode": {
 			"extensions": [
