--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,22 +1,22 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/postgres
 {
-	"build": {
-		"dockerfile": "Dockerfile"
-	},
-	// Uncomment if using podman
-	//"runArgs": ["--userns=keep-id"],
-	// If using podman, change type=bind to type=bind,Z
-	"workspaceMount": "source=${localWorkspaceFolder},target=/workspace/${localWorkspaceFolderBasename},type=bind",
-	"workspaceFolder": "/workspace/${localWorkspaceFolderBasename}",
-
-	"onCreateCommand": "bash .devcontainer/onCreateCommand.sh",
-	"postStartCommand": "bash .devcontainer/postStartCommand.sh",
+	"name": "Python 3 & PostgreSQL",
+	"dockerComposeFile": "docker-compose.yml",
+	"service": "app",
+	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+	"postCreateCommand": "pip install --user -r requirements.txt",
 	"customizations": {
-		"vscode": {
-			"extensions": [
-				"ms-python.python",
-    				"mtxr.sqltools-driver-pg",
-    				"mtxr.sqltools"
-			]
-		}
-	}
+        "vscode": {
+            "settings": {
+                "terminal.integrated.shell.linux": "/bin/bash"
+            },
+            "extensions": [
+                "ms-python.python",
+                "mtxr.sqltools",
+                "mtxr.sqltools-driver-pg",
+		"rangav.vscode-thunder-client"
+            ]
+        }
+    }
 }
